fix: adjust margin in process timeline styles for better alignment

--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -693,7 +693,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 6rem;
-  margin: -1.5rem 0 0 0;
+  margin: -0.6rem 0 0 0;
   width: 95%;
 }
 .process-timeline__image {
