--- a/project/assets/scss/components/_process-timeline.scss
+++ b/project/assets/scss/components/_process-timeline.scss
@@ -140,7 +140,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 6rem;
     // border: 1px solid red;
-    margin: -1.5rem 0 0 0;
+    margin: -0.6rem 0 0 0;
     width: 95%;
   }
 
